# Ampel-CatalogMatch

./: .copier-answers.yml  README.md  pyproject.toml
.github/workflows/: main.yml
ampel/ztf/base/: CatalogMatchFilter.py  CatalogMatchUnit.py
ampel/ztf/t2/: T2CatalogMatch.py
ampel/ztf/t3/complement/: TNSNames.py
conf/ampel-catalogmatch/: ampel.yml
tests/: conftest.py  context_fixtures.py  test_T2CatalogMatch.py
tests/test-data/: testing-config.yaml
