[project]
name = "ampel-catalogmatch"

[tool.poetry]
version = "0.10.0a0"
description = ""
authors = [
]
maintainers = [
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelAstro/Ampel-CatalogMatch"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
packages = [
    {include = "ampel"}
]
exclude = [
    "ampel/py.typed",
]
include = [
    'conf/*/*.json',
    'conf/*/*/*.json',
    'conf/*/*.yaml',
    'conf/*/*/*.yaml',
    'conf/*/*.yml',
    'conf/*/*/*.yml',
]


[tool.poetry.dependencies]
python = "^3.11"
ampel-interface = {version = ">=0.10.4.post2,<0.11"}
requests = "^2.32.5"
backoff = "^2.2.1"
requests-toolbelt = "^1.0.0"
ampel-alerts = "^0.10.3a6"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--showlocals -ra"
filterwarnings = [
    "error",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
]

[tool.mypy]
namespace_packages = true
packages = [
  "ampel"
]
plugins = [
  "pydantic.mypy",
]
show_error_codes = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "astropy.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "DTZ",  # datetimez
    "T20",  # print
    "PT",   # pytest-style
    "RET",  # return
    "SLF",  # self
    "SIM",  # simplify
    "ARG",  # unused-arguments
    "PL",   # pylint
    "PERF", # perflint
    "RUF",  # ruff
]
ignore = [
    "E501",    # line too long
    "PLR09",   # too many (arguments|branches)
    "PLR2004", # Magic value used in comparison
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
               # fine for AmpelUnit, actually (ruff has a special case for pydantic)
]

[tool.ruff.lint.isort]
known-first-party = ["ampel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["RUF018", "SLF001"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-ampel-core (>=0.10.0a3,<0.11.0)"
]
